--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,12 +1,15 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      Loja de Cerveja
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+  Bem vindo ao app de cerveja, mais famoso do Brasil.
+  <h2>Conheça nossas cervejas</h2>
+  <ion-button expand="block" color="warning" href="/puro-malte">Puro Malte</ion-button>
+  <ion-button expand="block" color="danger" href="/pilsen">Pilsen</ion-button>
+  <ion-button expand="block" color="secondary">Lager</ion-button>
 </ion-content>
