--- a/src/app/lager/lager.page.html
+++ b/src/app/lager/lager.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Puro Malte</ion-title>
+    <ion-title>Lager</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -8,12 +8,12 @@
   <ion-button color="dark" expand="block" [routerLink]="['/home']">Home</ion-button>
   <ion-card>
     <ion-card-header>
-      <ion-img src="assets/proibida-card-header.png"></ion-img>
+      <ion-img src="assets/amstel-card-header.jpg"></ion-img>
     </ion-card-header>
     <ion-card-content>
-      <ion-card-subtitle>Puro Malte</ion-card-subtitle>
-      <ion-card-title>Proibida</ion-card-title>
-      <p>Probida. A cerveja número 10.</p>
+      <ion-card-subtitle>Lager</ion-card-subtitle>
+      <ion-card-title>Amstel</ion-card-title>
+      <p>Vai de Amstel que não tem erro.</p>
     </ion-card-content>
   </ion-card>
 </ion-content>
