--- a/src/app/pilsen/pilsen.page.html
+++ b/src/app/pilsen/pilsen.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content padding>
-    <ion-button color="dark" expand="block" href="/home">Home</ion-button>
+    <ion-button color="dark" expand="block" [routerLink]="['/home']">Home</ion-button>
     <ion-card>
       <ion-card-header>
         <ion-img src="assets/eisenbahn-card-header.jpg"></ion-img>
