--- a/src/app/puro-malte/puro-malte.page.html
+++ b/src/app/puro-malte/puro-malte.page.html
@@ -14,6 +14,9 @@
       <ion-card-subtitle>Puro Malte</ion-card-subtitle>
       <ion-card-title>Proibida</ion-card-title>
       <p>Probida. A cerveja número 10.</p>
+      <ion-button fill="outline" [routerLink]="['/cerveja-detalhes']">
+        Mais detalhes
+      </ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
