Implementação passagem de parametros pela url para outras páginas

--- a/src/app/cerveja-detalhes/cerveja-detalhes.page.html
+++ b/src/app/cerveja-detalhes/cerveja-detalhes.page.html
@@ -5,6 +5,7 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-button color='dark' expand='block' [routerLink]="['/home']">Home</ion-button>
   <h2>{{nome}}</h2>
   <p>{{detalhes}}</p>
 </ion-content>
