--- a/src/app/puro-malte/puro-malte.page.html
+++ b/src/app/puro-malte/puro-malte.page.html
@@ -14,7 +14,20 @@
       <ion-card-subtitle>Puro Malte</ion-card-subtitle>
       <ion-card-title>Proibida</ion-card-title>
       <p>Probida. A cerveja número 10.</p>
-      <ion-button fill="outline" [routerLink]="['/cerveja-detalhes']">
+      <ion-button fill="outline" [routerLink]="['/cerveja-detalhes', 50]">
+        Mais detalhes
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-header>
+      <ion-img src="assets/skol-card-header.jpg"></ion-img>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-card-subtitle>Puro Malte</ion-card-subtitle>
+      <ion-card-title>Skol</ion-card-title>
+      <p>A puro malte que desce redondo.</p>
+      <ion-button fill="outline" [routerLink]="['/cerveja-detalhes', 60]">
         Mais detalhes
       </ion-button>
     </ion-card-content>
