--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,14 +5,21 @@
     </ion-title>
     <ion-buttons slot='primary'>
       <ion-button [routerLink]='["/add-cerveja"]'>
-        <ion-icon name='add-circle' ></ion-icon>
+        <ion-icon color='danger' name='add-circle' ></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  Bem vindo ao app de cerveja, mais famoso do Brasil.
+  <h6>Bem vindo ao app de cerveja, mais famoso do Brasil.</h6>
   <h2>Conheça nossas cervejas</h2>
-  
+  <div *ngFor="let cerveja of cervejas">
+    <ion-card>
+        <ion-card-content>
+            <h2>{{cerveja.nome}}</h2>
+            <p> {{cerveja.descricao}} </p>
+        </ion-card-content>
+      </ion-card>
+  </div>
 </ion-content>
