--- a/src/app/cerveja-detalhes/cerveja-detalhes.page.html
+++ b/src/app/cerveja-detalhes/cerveja-detalhes.page.html
@@ -1,11 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Detalhes da Cerveja {{nome}}</ion-title>
+    <ion-buttons slot='start'>
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-button color='dark' expand='block' [routerLink]="['/home']">Home</ion-button>
   <h2>{{nome}}</h2>
-  <p>{{detalhes}}</p>
+  <p>{{descricao}}</p>
 </ion-content>
